build/log/idf_py_stdout_output_206057
[1/10] Performing build step for 'bootloader'
[1/1] cd /home/jon/esp32_testing/mekaDoseSigma/build/bootloader/esp-idf/esptool_py && /home/jon/.espressif/python_env/idf5.2_py3.10_env/bin/python /home/jon/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/jon/esp32_testing/mekaDoseSigma/build/bootloader/bootloader.bin
Bootloader binary size 0x5800 bytes. 0x2800 bytes (31%) free.
[2/10] No install step for 'bootloader'
[3/10] Completed 'bootloader'
[4/10] Building CXX object esp-idf/main/CMakeFiles/__idf_main.dir/game/objective_hud.cpp.obj
FAILED: [code=1] esp-idf/main/CMakeFiles/__idf_main.dir/game/objective_hud.cpp.obj 
/home/jon/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20230928/xtensa-esp-elf/bin/xtensa-esp32s3-elf-g++ -DESP_PLATFORM -DIDF_VER=\"v5.2.2\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/jon/esp32_testing/mekaDoseSigma/build/config -I/home/jon/esp32_testing/mekaDoseSigma/main -I/home/jon/esp/esp-idf/components/newlib/platform_include -I/home/jon/esp/esp-idf/components/freertos/config/include -I/home/jon/esp/esp-idf/components/freertos/config/include/freertos -I/home/jon/esp/esp-idf/components/freertos/config/xtensa/include -I/home/jon/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/jon/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/jon/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/jon/esp/esp-idf/components/freertos/esp_additions/include -I/home/jon/esp/esp-idf/components/esp_hw_support/include -I/home/jon/esp/esp-idf/components/esp_hw_support/include/soc -I/home/jon/esp/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/home/jon/esp/esp-idf/components/esp_hw_support/port/esp32s3/. -I/home/jon/esp/esp-idf/components/heap/include -I/home/jon/esp/esp-idf/components/log/include -I/home/jon/esp/esp-idf/components/soc/include -I/home/jon/esp/esp-idf/components/soc/esp32s3 -I/home/jon/esp/esp-idf/components/soc/esp32s3/include -I/home/jon/esp/esp-idf/components/hal/platform_port/include -I/home/jon/esp/esp-idf/components/hal/esp32s3/include -I/home/jon/esp/esp-idf/components/hal/include -I/home/jon/esp/esp-idf/components/esp_rom/include -I/home/jon/esp/esp-idf/components/esp_rom/include/esp32s3 -I/home/jon/esp/esp-idf/components/esp_rom/esp32s3 -I/home/jon/esp/esp-idf/components/esp_common/include -I/home/jon/esp/esp-idf/components/esp_system/include -I/home/jon/esp/esp-idf/components/esp_system/port/soc -I/home/jon/esp/esp-idf/components/esp_system/port/include/private -I/home/jon/esp/esp-idf/components/xtensa/esp32s3/include -I/home/jon/esp/esp-idf/components/xtensa/include -I/home/jon/esp/esp-idf/components/xtensa/deprecated_include -I/home/jon/esp/esp-idf/components/lwip/include -I/home/jon/esp/esp-idf/components/lwip/include/apps -I/home/jon/esp/esp-idf/components/lwip/include/apps/sntp -I/home/jon/esp/esp-idf/components/lwip/lwip/src/include -I/home/jon/esp/esp-idf/components/lwip/port/include -I/home/jon/esp/esp-idf/components/lwip/port/freertos/include -I/home/jon/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/jon/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/jon/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/jon/esp/esp-idf/components/driver/include -I/home/jon/esp/esp-idf/components/driver/deprecated -I/home/jon/esp/esp-idf/components/driver/analog_comparator/include -I/home/jon/esp/esp-idf/components/driver/dac/include -I/home/jon/esp/esp-idf/components/driver/gpio/include -I/home/jon/esp/esp-idf/components/driver/gptimer/include -I/home/jon/esp/esp-idf/components/driver/i2c/include -I/home/jon/esp/esp-idf/components/driver/i2s/include -I/home/jon/esp/esp-idf/components/driver/ledc/include -I/home/jon/esp/esp-idf/components/driver/mcpwm/include -I/home/jon/esp/esp-idf/components/driver/parlio/include -I/home/jon/esp/esp-idf/components/driver/pcnt/include -I/home/jon/esp/esp-idf/components/driver/rmt/include -I/home/jon/esp/esp-idf/components/driver/sdio_slave/include -I/home/jon/esp/esp-idf/components/driver/sdmmc/include -I/home/jon/esp/esp-idf/components/driver/sigma_delta/include -I/home/jon/esp/esp-idf/components/driver/spi/include -I/home/jon/esp/esp-idf/components/driver/temperature_sensor/include -I/home/jon/esp/esp-idf/components/driver/touch_sensor/include -I/home/jon/esp/esp-idf/components/driver/twai/include -I/home/jon/esp/esp-idf/components/driver/uart/include -I/home/jon/esp/esp-idf/components/driver/usb_serial_jtag/include -I/home/jon/esp/esp-idf/components/driver/touch_sensor/esp32s3/include -I/home/jon/esp/esp-idf/components/esp_pm/include -I/home/jon/esp/esp-idf/components/esp_ringbuf/include -I/home/jon/esp/esp-idf/components/esp_lcd/include -I/home/jon/esp/esp-idf/components/esp_lcd/interface -I/home/jon/esp/esp-idf/components/esp_timer/include -I/home/jon/esp32_testing/mekaDoseSigma/managed_components/espressif__esp_lcd_gc9a01/include -I/home/jon/esp32_testing/mekaDoseSigma/managed_components/jet/src -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -O2 -fmacro-prefix-map=/home/jon/esp32_testing/mekaDoseSigma=. -fmacro-prefix-map=/home/jon/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu++2b -fexceptions -fno-rtti -DESP_LCD_GC9A01_VER_MAJOR=2 -DESP_LCD_GC9A01_VER_MINOR=0 -DESP_LCD_GC9A01_VER_PATCH=4 -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/game/objective_hud.cpp.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/game/objective_hud.cpp.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/game/objective_hud.cpp.obj -c /home/jon/esp32_testing/mekaDoseSigma/main/game/objective_hud.cpp
/home/jon/esp32_testing/mekaDoseSigma/main/game/objective_hud.cpp: In function 'bool Game::{anonymous}::projectWorldPoint(const Renderer::Camera&, int, int, float, float, float, float&, float&, bool&)':
/home/jon/esp32_testing/mekaDoseSigma/main/game/objective_hud.cpp:58:15: error: 'Vector3' is not a member of 'Renderer'; did you mean 'Vector3'?
   58 |     Renderer::Vector3 viewDir = camera.transformDirection(
      |               ^~~~~~~
In file included from /home/jon/esp32_testing/mekaDoseSigma/managed_components/jet/src/Camera.hpp:6,
                 from /home/jon/esp32_testing/mekaDoseSigma/main/game/objective_hud.hpp:3,
                 from /home/jon/esp32_testing/mekaDoseSigma/main/game/objective_hud.cpp:1:
/home/jon/esp32_testing/mekaDoseSigma/managed_components/jet/src/Shader.hpp:14:8: note: 'Vector3' declared here
   14 | struct Vector3
      |        ^~~~~~~
/home/jon/esp32_testing/mekaDoseSigma/main/game/objective_hud.cpp:61:44: error: expected primary-expression before ')' token
   61 |          static_cast<int32_t>(lroundf(dz))});
      |                                            ^
/home/jon/esp32_testing/mekaDoseSigma/main/game/objective_hud.cpp:63:18: error: 'viewDir' was not declared in this scope
   63 |     outInFront = viewDir.z > 0;
      |                  ^~~~~~~
/home/jon/esp32_testing/mekaDoseSigma/main/game/objective_hud.cpp:54:17: warning: unused variable 'dx' [-Wunused-variable]
   54 |     const float dx = worldX - static_cast<float>(camera.position.x);
      |                 ^~
/home/jon/esp32_testing/mekaDoseSigma/main/game/objective_hud.cpp:55:17: warning: unused variable 'dy' [-Wunused-variable]
   55 |     const float dy = worldY - static_cast<float>(camera.position.y);
      |                 ^~
/home/jon/esp32_testing/mekaDoseSigma/main/game/objective_hud.cpp:56:17: warning: unused variable 'dz' [-Wunused-variable]
   56 |     const float dz = worldZ - static_cast<float>(camera.position.z);
      |                 ^~
[5/10] Building CXX object esp-idf/main/CMakeFiles/__idf_main.dir/game/objective.cpp.obj
ninja: build stopped: subcommand failed.
